# advent-of-code-2025

./: .pre-commit-config.yaml  Cargo.toml
aoc/: Cargo.toml
aoc/src/day_1/: main.rs
aoc/src/day_10/: main.rs
aoc/src/day_11/: main.rs
aoc/src/day_12/: main.rs
aoc/src/day_2/: main.rs
aoc/src/day_3/: main.rs
aoc/src/day_4/: main.rs
aoc/src/day_5/: main.rs
aoc/src/day_6/: main.rs
aoc/src/day_7/: main.rs
aoc/src/day_8/: main.rs
aoc/src/day_9/: main.rs
coord_2d/: Cargo.toml
coord_2d/src/: lib.rs
coord_3d/: Cargo.toml
coord_3d/src/: lib.rs
direction/: Cargo.toml
direction/src/: lib.rs
grid/: Cargo.toml
grid/src/: lib.rs
span_1d/: Cargo.toml
span_1d/src/: lib.rs
tools/: install_precommit.sh
utils/: Cargo.toml
utils/src/: lib.rs
