[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
coord_2d = { path =  "../coord_2d" }
direction = { path =  "../direction" }
grid = { path = "../grid" }
itertools = { workspace = true }
utils = { path = "../utils" }
rayon = { workspace = true }
regex = { workspace = true }
span_1d = { path = "../span_1d" }
thiserror = { workspace = true }

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"
