[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[dependencies]
coord_2d = { path =  "../coord_2d" }
direction = { path =  "../direction" }
grid = { path = "../grid" }
itertools = { workspace = true }
utils = { path = "../utils" }
rayon = { workspace = true }
regex = { workspace = true }
span_1d = { path = "../span_1d" }
thiserror = { workspace = true }

[[bin]]
name = "day_1"
path = "src/day_1/main.rs"

[[bin]]
name = "day_2"
path = "src/day_2/main.rs"

[[bin]]
name = "day_3"
path = "src/day_3/main.rs"

[[bin]]
name = "day_4"
path = "src/day_4/main.rs"

[[bin]]
name = "day_5"
path = "src/day_5/main.rs"

[[bin]]
name = "day_6"
path = "src/day_6/main.rs"

[[bin]]
name = "day_7"
path = "src/day_7/main.rs"
